--- a/Binomial/Binomial.ipynb
+++ b/Binomial/Binomial.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,7 @@
      "text": [
       "The value of the call option price is: 33.40581194163518\n",
       "Up Factor: 0.0334\n",
-      "Down Factor: 0.0324\n",
-      "test\n"
+      "Down Factor: 0.0324\n"
      ]
     }
    ],
