--- a/Black_Scholes/BlackScholes.ipynb
+++ b/Black_Scholes/BlackScholes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {
       "image/png": {
        "height": 300,
@@ -68,21 +68,20 @@
     }
    ],
    "source": [
-    "\n",
     "from IPython.display import Image\n",
     "Image(filename='/Users/mburley/Downloads/BlackScholes.png', width = 600, height = 300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%%**********************]  4 of 4 completed"
+      "[*********************100%%**********************]  4 of 4 completed\n"
      ]
     },
     {
@@ -91,26 +90,19 @@
      "text": [
       "                  GOOG        AAPL          GE        AMZN\n",
       "Date                                                      \n",
-      "2010-01-04    6.470741    6.695000   67.992661   15.610239\n",
-      "2010-01-05    6.481928    6.734500   68.344711   15.541497\n",
-      "2010-01-06    6.378826    6.612500   67.992661   15.149715\n",
-      "2010-01-07    6.367032    6.500000   71.513321   14.797037\n",
-      "2010-01-08    6.409362    6.676000   73.053581   14.994298\n",
+      "2010-01-04    6.470740    6.695000   50.141327         NaN\n",
+      "2010-01-05    6.481929    6.734500   50.400936         NaN\n",
+      "2010-01-06    6.378825    6.612500   50.141327         NaN\n",
+      "2010-01-07    6.367033    6.500000   52.737633         NaN\n",
+      "2010-01-08    6.409362    6.676000   53.873531         NaN\n",
       "...                ...         ...         ...         ...\n",
-      "2024-02-29  180.750000  176.759995  156.889999  139.779999\n",
-      "2024-03-01  179.660004  178.220001  158.649994  138.080002\n",
-      "2024-03-04  175.100006  177.580002  161.009995  134.199997\n",
-      "2024-03-05  170.119995  174.119995  157.860001  133.779999\n",
-      "2024-03-06  169.119995  173.509995  159.500000  132.559998\n",
+      "2024-03-27  173.309998  179.830002  143.750992  151.940002\n",
+      "2024-03-28  171.479996  180.380005  140.087784  152.259995\n",
+      "2024-04-01  170.029999  180.970001  139.952118  156.500000\n",
+      "2024-04-02  168.839996  180.690002  136.470001  155.869995\n",
+      "2024-04-03  169.649994  182.410004  145.619995  156.369995\n",
       "\n",
-      "[3567 rows x 4 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "[3586 rows x 4 columns]\n"
      ]
     }
    ],
@@ -125,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GOOG    0.572128\n",
-      "AAPL    0.555564\n",
-      "GE      0.365289\n",
-      "AMZN    0.405514\n",
+      "GOOG    0.576436\n",
+      "AAPL    0.560147\n",
+      "GE      0.285437\n",
+      "AMZN    0.385956\n",
       "dtype: float64\n"
      ]
     }
@@ -153,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -257,16 +249,16 @@
      "output_type": "stream",
      "text": [
       "  Tickers  Market Price     Sigma  Dividends  Strike Price  Call Premium  \\\n",
-      "0    GOOG    169.119995  0.572128       0.00           195     19.451661   \n",
-      "1    AAPL    173.509995  0.555564       0.24           175     17.736796   \n",
-      "2      GE    159.500000  0.365289       0.08           139     25.306690   \n",
-      "3    AMZN    132.559998  0.405514       0.00           151      9.648935   \n",
+      "0    GOOG    169.649994  0.576436       0.00           195     19.904434   \n",
+      "1    AAPL    182.410004  0.560147       0.24           175     21.883024   \n",
+      "2      GE    145.619995  0.285437       0.08           139     13.377359   \n",
+      "3    AMZN    156.369995  0.385956       0.00           151     21.420932   \n",
       "\n",
       "   Put Premium  \n",
-      "0    40.517099  \n",
-      "1    34.526471  \n",
-      "2     7.628852  \n",
-      "3    24.360734  \n"
+      "0    40.439873  \n",
+      "1    30.779099  \n",
+      "2     9.035284  \n",
+      "3    12.322734  \n"
      ]
     }
    ],
@@ -304,30 +296,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0234313053558424\n"
+      "The value of the call option is: $2.1334\n"
      ]
     }
    ],
    "source": [
     "### Manual Test\n",
     "\n",
-    "S_0 = 40\n",
-    "K = 45\n",
-    "r = 0.03\n",
+    "S_0 = 60\n",
+    "K = 65\n",
+    "r = 0.08\n",
     "q = 0\n",
-    "sigma = 0.4\n",
+    "sigma = 0.3\n",
     "option_type = 0\n",
-    "T = 0.3333\n",
+    "T = 0.25\n",
     "\n",
     "result = BlackScholes(option_type, r, S_0, K, T, sigma, q)\n",
-    "print(result)"
+    "print('The value of the call option is: $' + str(round(result, 4)))"
    ]
   }
  ],
