Test case added

--- a/Binomial/Binomial.ipynb
+++ b/Binomial/Binomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,10 +34,10 @@
     {
      "data": {
       "text/plain": [
-       "156.5"
+       "156.3699951171875"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3289729595268956"
+       "0.3295169976389587"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of the call option price is: 33.40581194163518\n",
-      "Up Factor: 0.0334\n",
+      "The value of the call option price is: 33.33835298326762\n",
+      "Up Factor: 0.0335\n",
       "Down Factor: 0.0324\n"
      ]
     }
@@ -175,6 +175,30 @@
     "print('The value of the ' + option_type + ' option price is: ' + str(option_val))\n",
     "print('Up Factor: ' + str(round(up_factor, 4)))\n",
     "print('Down Factor: ' + str(round(down_factor, 4)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of the call option price is: 4.6277\n",
+      "Up Factor: 0.0995\n",
+      "Down Factor: 0.0905\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Manual Test (Accuracy Check)\n",
+    "\n",
+    "option_test, up_factor, down_factor = american_binomial_model(S_0 = 100, K = 95, T = 0.5, r = 0.08, sigma = 0.3, option_type = 'put', n = 5)\n",
+    "print('The value of the ' + option_type + ' option price is: ' + str(round(option_test, 4)))\n",
+    "print('Up Factor: ' + str(round(up_factor, 4)))\n",
+    "print('Down Factor: ' + str(round(down_factor, 4)))"
    ]
   }
  ],
