added test case and updated BS function logic

--- a/BjerksundStensland/BjerksundStensland.ipynb
+++ b/BjerksundStensland/BjerksundStensland.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -35,10 +35,10 @@
     {
      "data": {
       "text/plain": [
-       "152.25999450683594"
+       "156.3699951171875"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32869474791095804"
+       "0.3295169976389587"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "    alpha_2 = (I_2 - K) * (I_2) ** (-Beta)\n",
     "    \n",
     "    # Logic to determine whether to exercise option\n",
-    "    if (S_0 >= I_2).item() and b >= r:\n",
+    "    if (S_0 >= I_2).item():\n",
     "        # If stock price >= upper trigger price (boundary has been met), option price = intrinsic value\n",
     "        call_approx = S_0 - K\n",
     "    else:\n",
@@ -220,19 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First flat boundary (I_1): 451.54992\n",
-      "Second flat boundary (I_2): 460.66972\n",
+      "First flat boundary (I_1): 452.52038\n",
+      "Second flat boundary (I_2): 461.63794\n",
       "Time boundary (t_1): 226.0 days\n",
-      "h_1: 0.11135\n",
-      "h_2: 0.14164\n",
-      "Bjerksund-Stensland call approximation: 58.47639\n"
+      "h_1: 0.11097\n",
+      "h_2: 0.14115\n",
+      "Bjerksund-Stensland call approximation: 62.26945\n"
      ]
     }
    ],
@@ -248,6 +248,38 @@
     "print(\"h_1:\", round(h_1, 5))\n",
     "print(\"h_2:\", round(h_2, 5))\n",
     "print(\"Bjerksund-Stensland call approximation:\", round(call_approx, 5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First flat boundary (I_1): 145.35219\n",
+      "Second flat boundary (I_2): 147.04553\n",
+      "Time boundary (t_1): 23.0 days\n",
+      "h_1: 0.13476\n",
+      "h_2: 0.17142\n",
+      "Bjerksund-Stensland call approximation: 8.34432 and the correct option price should be: 0.0205\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Test Case\n",
+    "# Compute the Bjerksund-Stensland call approximation\n",
+    "t_1, h_1, h_2, I_1, I_2, call_approx = bjerksund_stensland_call(S_0=90, K=100, T=0.1, r=0.1, b=0, sigma=0.15)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"First flat boundary (I_1):\", round(I_1, 5))\n",
+    "print(\"Second flat boundary (I_2):\", round(I_2, 5))\n",
+    "print(\"Time boundary (t_1):\", str(round(t_1*365, 0)) + ' days')\n",
+    "print(\"h_1:\", round(h_1, 5))\n",
+    "print(\"h_2:\", round(h_2, 5))\n",
+    "print(\"Bjerksund-Stensland call approximation: \" + str(round(call_approx, 5)) + \" and the correct option price should be: 0.0205\")"
    ]
   }
  ],
