updated ksi function

--- a/BjerksundStensland/BjerksundStensland.ipynb
+++ b/BjerksundStensland/BjerksundStensland.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,14 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from scipy.stats import norm\n",
+    "from scipy.stats import multivariate_normal\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +39,7 @@
        "156.3699951171875"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +74,7 @@
        "0.3295169976389587"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +124,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Cunulative Bivariate Normal Distribution Function\n",
+    "def M(u, v, rho):\n",
+    "    '''\n",
+    "    Compute the cumulative bivariate normal distribution.\n",
+    "\n",
+    "    u: Lower threshold for the first variable\n",
+    "    v: Lower threshold for the second variable\n",
+    "    rho: Correlation coefficient between the two variables\n",
+    "    '''\n",
+    "    mean = [0, 0]\n",
+    "    cov = [[1, rho], [rho, 1]]  # Covariance matrix\n",
+    "    rv = multivariate_normal(mean, cov)\n",
+    "\n",
+    "    lower_bound = [-np.inf, -np.inf]\n",
+    "    upper_bound = [u, v]\n",
+    "    cdf_value = rv.cdf(upper_bound) - rv.cdf(lower_bound)\n",
+    "\n",
+    "    return cdf_value\n",
+    "\n",
     "# Compute psi Function\n",
-    "def psi(S_0, T, y, H, I_2, I_1, t_1, r, b, sigma):\n",
+    "def ksi(S_0, T, y, H, I_2, I_1, t_1, r, b, sigma):\n",
     "    '''\n",
     "    psi is a crucial part of the BS call option approximation formula as it incorporates the barrier feature and early exercise behavior into the option pricing calculation\n",
     "\n",
@@ -143,17 +163,28 @@
     "    b: Cost of carry. This can include costs such as storage costs, financing costs, or dividend yield, depending on the context.\n",
     "    sigma: Volatility of the underlying asset's returns. This measures the variability of the asset's price over time.\n",
     "    '''\n",
-    "    psi = phi(S_0, t_1, y, H, I_2, r, b, sigma) - phi(S_0, t_1, y, H, I_1, r, b, sigma) \\\n",
-    "          - I_2 * np.exp(-r * T) * (norm.cdf((-np.log(I_2 ** 2 / (S_0 * H)) + (b + (y - 0.5) * sigma ** 2) * T) / (sigma * np.sqrt(T)))\n",
-    "                                    - norm.cdf((-np.log(I_2 ** 2 / (S_0 * H))) / (sigma * np.sqrt(T)))) \\\n",
-    "          + I_1 * np.exp(-r * T) * (norm.cdf((-np.log(I_1 ** 2 / (S_0 * H)) + (b + (y - 0.5) * sigma ** 2) * T) / (sigma * np.sqrt(T)))\n",
-    "                                    - norm.cdf((-np.log(I_1 ** 2 / (S_0 * H))) / (sigma * np.sqrt(T))))\n",
-    "    return psi"
+    "    e_1 = (np.log(S_0 / I_1) + (b + (y-1/2)*sigma**2) * t_1) / (sigma * np.sqrt(t_1))\n",
+    "    e_2 = (np.log(I_2**2 / (S_0*I_1)) + (b + (y-1/2)*sigma**2) * t_1) / (sigma * np.sqrt(t_1))\n",
+    "    e_3 = (np.log(S_0 / I_1) - (b + (y-1/2)*sigma**2) * t_1) / (sigma * np.sqrt(t_1))\n",
+    "    e_4 = (np.log(I_2**2 / (S_0*I_1)) - (b + (y-1/2)*sigma**2) * t_1) / (sigma * np.sqrt(t_1))\n",
+    "\n",
+    "    f_1 = (np.log(S_0 / H) + (b + (y-1/2)*sigma**2) * T) / (sigma * np.sqrt(T))\n",
+    "    f_2 = (np.log(I_2**2 / (S_0*H)) + (b + (y-1/2)*sigma**2) * T) / (sigma * np.sqrt(T))\n",
+    "    f_3 = (np.log(S_0 / S_0*H) - (b + (y-1/2)*sigma**2) * T) / (sigma * np.sqrt(T))\n",
+    "    f_4 = (np.log((S_0*I_1)**2 / (H*I_2)**2) - (b + (y-1/2)*sigma**2) * T) / (sigma * np.sqrt(T))      \n",
+    "\n",
+    "    k = (2*b / sigma**2) + (2*y + 1)\n",
+    "\n",
+    "    ksi = np.exp((b - r) * T) * S_0**y * (\n",
+    "        M(-e_1, -f_1, -np.sqrt(t_1 / T)) + M(-e_2, -f_2, -np.sqrt(t_1 / T)) - I_2**(k) * M(-e_3, -f_3, -np.sqrt(t_1 / T)) - I_1**(k) * M(-e_4, -f_4, -np.sqrt(t_1 / T))\n",
+    "    )\n",
+    "\n",
+    "    return ksi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,22 +236,18 @@
     "            alpha_2 * (S_0 ** Beta) - alpha_2 * phi(S_0, t_1, Beta, I_2, I_2, r, b, sigma) +\n",
     "            phi(S_0, t_1, 1, I_2, I_2, r, b, sigma) - phi(S_0, t_1, 1, I_1, I_2, r, b, sigma) -\n",
     "            K * phi(S_0, t_1, 0, I_2, I_2, r, b, sigma) + K * phi(S_0, t_1, 0, I_1, I_2, r, b, sigma) +\n",
-    "            alpha_1 * phi(S_0, t_1, Beta, I_1, I_2, r, b, sigma) - alpha_1 * psi(S_0, T, Beta, I_1, I_2, I_1, t_1, r, b,\n",
+    "            alpha_1 * phi(S_0, t_1, Beta, I_1, I_2, r, b, sigma) - alpha_1 * ksi(S_0, T, Beta, I_1, I_2, I_1, t_1, r, b,\n",
     "                                                                                 sigma) +\n",
-    "            psi(S_0, T, 1, I_1, I_2, I_1, t_1, r, b, sigma) - psi(S_0, T, 1, K, I_2, I_1, t_1, r, b, sigma) -\n",
-    "            K * psi(S_0, T, 0, I_1, I_2, I_1, t_1, r, b, sigma) + psi(S_0, T, 0, K, I_2, I_1, t_1, r, b, sigma)\n",
+    "            ksi(S_0, T, 1, I_1, I_2, I_1, t_1, r, b, sigma) - ksi(S_0, T, 1, K, I_2, I_1, t_1, r, b, sigma) -\n",
+    "            K * ksi(S_0, T, 0, I_1, I_2, I_1, t_1, r, b, sigma) + ksi(S_0, T, 0, K, I_2, I_1, t_1, r, b, sigma)\n",
     "            )\n",
-    "    \n",
-    "    # in boundary conditions, this approximation can break down\n",
-    "    # Make sure option value is greater than or equal to European value\n",
-    "    #value = max(value, e_value)\n",
     "\n",
     "    return t_1, h_1, h_2, I_1, I_2, call_approx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +259,7 @@
       "Time boundary (t_1): 226.0 days\n",
       "h_1: 0.11097\n",
       "h_2: 0.14115\n",
-      "Bjerksund-Stensland call approximation: 62.26945\n"
+      "Bjerksund-Stensland call approximation: 211401702.85857\n"
      ]
     }
    ],
@@ -252,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +291,7 @@
       "Time boundary (t_1): 23.0 days\n",
       "h_1: 0.13476\n",
       "h_2: 0.17142\n",
-      "Bjerksund-Stensland call approximation: 8.34432 and the correct option price should be: 0.0205\n"
+      "Bjerksund-Stensland call approximation: -96.73166 and the correct option price should be: 0.0205\n"
      ]
     }
    ],
