updated phi and ksi

--- a/BjerksundStensland/BjerksundStensland.ipynb
+++ b/BjerksundStensland/BjerksundStensland.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "156.3699951171875"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "0.3295169976389587"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,17 +114,21 @@
     "    H: The barrier level\n",
     "    I: The rebate, which is a cash payment given if the barrier is hit\n",
     "    '''\n",
-    "    d1 = (np.log(S_0 / H) + (b + (y - 0.5) * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
-    "    d2 = d1 - sigma * np.sqrt(T)\n",
+    "    lam = (-r + y * b + 0.5 * y * (y - 1) * sigma**2) * T\n",
     "\n",
-    "    phi = S_0 * cdf(d1) - np.exp(-r * T) * I * cdf(d2)\n",
+    "    d_1 = (np.log(S_0 / H) + (b + (y - 0.5) * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
+    "    d_2 = d_1 - sigma * np.sqrt(T)\n",
+    "\n",
+    "    k = (2 * b / (sigma**2)) + (2 * y - 1)\n",
+    "\n",
+    "    phi = np.exp(lam) * (S_0**y) * (cdf(-d_1) - (((I/S_0)**k) * cdf(-d_2)))\n",
     "    \n",
     "    return phi\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +263,7 @@
       "Time boundary (t_1): 226.0 days\n",
       "h_1: 0.11097\n",
       "h_2: 0.14115\n",
-      "Bjerksund-Stensland call approximation: 211401702.85857\n"
+      "Bjerksund-Stensland call approximation: 211401702.13763\n"
      ]
     }
    ],
@@ -279,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +295,7 @@
       "Time boundary (t_1): 23.0 days\n",
       "h_1: 0.13476\n",
       "h_2: 0.17142\n",
-      "Bjerksund-Stensland call approximation: -96.73166 and the correct option price should be: 0.0205\n"
+      "Bjerksund-Stensland call approximation: -97.37193 and the correct option price should be: 0.0205\n"
      ]
     }
    ],
