--- a/BjerksundStensland/BjerksundStensland.ipynb
+++ b/BjerksundStensland/BjerksundStensland.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,15 @@
     "import seaborn as sns\n",
     "from scipy.stats import norm\n",
     "from scipy.stats import multivariate_normal\n",
+    "from scipy.integrate import dblquad\n",
+    "from math import exp, sqrt, pi\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -36,10 +38,10 @@
     {
      "data": {
       "text/plain": [
-       "156.3699951171875"
+       "151.94000244140625"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3295169976389587"
+       "0.32973889585923516"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,28 +130,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Cunulative Bivariate Normal Distribution Function\n",
-    "def M(u, v, rho):\n",
-    "    '''\n",
-    "    Compute the cumulative bivariate normal distribution.\n",
+    "def genz_2004_cbnd(a, b, rho):\n",
+    "    if a == 0 and b == 0:\n",
+    "        return 0.25\n",
+    "    \n",
+    "    p = 0.5 * np.sqrt(2)\n",
+    "    r = [0.00324045, -0.193582, 0.242299, 0.726809]\n",
+    "    h = [0.24840615, 1.971626, 3.199208, 1.0]\n",
     "\n",
-    "    u: Lower threshold for the first variable\n",
-    "    v: Lower threshold for the second variable\n",
-    "    rho: Correlation coefficient between the two variables\n",
-    "    '''\n",
-    "    mean = [0, 0]\n",
-    "    cov = [[1, rho], [rho, 1]]  # Covariance matrix\n",
-    "    rv = multivariate_normal(mean, cov)\n",
+    "    h1 = 0.0\n",
+    "    h2 = 0.0\n",
+    "    for i in range(4):\n",
+    "        h1 += r[i] * np.exp((a ** 2) * h[i])\n",
+    "        h2 += r[i] * np.exp((b ** 2) * h[i])\n",
     "\n",
-    "    lower_bound = [-np.inf, -np.inf]\n",
-    "    upper_bound = [u, v]\n",
-    "    cdf_value = rv.cdf(upper_bound) - rv.cdf(lower_bound)\n",
+    "    h1 = rho * np.exp(-(a ** 2) / 2) * h1\n",
+    "    h2 = rho * np.exp(-(b ** 2) / 2) * h2\n",
     "\n",
-    "    return cdf_value\n",
+    "    c = 0.0\n",
+    "    if a < 0 and b < 0 and rho < 0:\n",
+    "        for i in range(4):\n",
+    "            for j in range(4):\n",
+    "                c += r[i] * r[j] * np.exp((a ** 2) * h[i] + (b ** 2) * h[j])\n",
+    "        c = c * np.exp((a * b * rho) ** 2 / (1 - rho ** 2)) / 2\n",
+    "    else:\n",
+    "        c = norm.cdf(a) * norm.cdf(b) - (h1 + h2 - 2 * rho * h1 * h2) / (6 * np.pi ** 0.5 * (1 - rho ** 2) ** 1.5)\n",
+    "\n",
+    "    return c\n",
     "\n",
     "# Compute psi Function\n",
     "def ksi(S_0, T, y, H, I_2, I_1, t_1, r, b, sigma):\n",
@@ -180,7 +192,7 @@
     "    k = (2*b / sigma**2) + (2*y + 1)\n",
     "\n",
     "    ksi = np.exp((b - r) * T) * S_0**y * (\n",
-    "        M(-e_1, -f_1, -np.sqrt(t_1 / T)) + M(-e_2, -f_2, -np.sqrt(t_1 / T)) - I_2**(k) * M(-e_3, -f_3, -np.sqrt(t_1 / T)) - I_1**(k) * M(-e_4, -f_4, -np.sqrt(t_1 / T))\n",
+    "        genz_2004_cbnd(-e_1, -f_1, -np.sqrt(t_1 / T)) + genz_2004_cbnd(-e_2, -f_2, -np.sqrt(t_1 / T)) - I_2**(k) * genz_2004_cbnd(-e_3, -f_3, -np.sqrt(t_1 / T)) - I_1**(k) * genz_2004_cbnd(-e_4, -f_4, -np.sqrt(t_1 / T))\n",
     "    )\n",
     "\n",
     "    return ksi"
@@ -188,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +210,8 @@
     "    S_0: Current price of the underlying asset (stock price).\n",
     "    K: Asset strike price\n",
     "    T: Time to expiration of the option (in years).\n",
-    "    H: The barrier level. This is the price level at which the barrier option comes into effect.\n",
-    "    I_2: Second flat boundary. This is related to the barrier structure and may have specific conditions for early exercise or option value adjustments.\n",
-    "    I_1​: First flat boundary. Similar to I_2​, this is also part of the barrier structure and affects the option's behavior.\n",
-    "    t_1​: Time boundary. This represents the time at which the second flat boundary (I_2​) comes into effect.\n",
     "    r: Risk-free interest rate. This is typically the interest rate on a risk-free asset, such as a government bond.\n",
     "    b: Cost of carry. This can include costs such as storage costs, financing costs, or dividend yield, depending on the context.\n",
-    "    B_0: The lower boundary or \"floor\" of the option's pricing domain. It is often associated with the intrinsic value of the option.\n",
-    "    B_infty: The upper boundary or \"ceiling\" of the option's pricing domain. It is the maximum value that the option can reach under certain conditions.\n",
     "    sigma: Volatility of the underlying asset's returns. This measures the variability of the asset's price over time.\n",
     "    '''\n",
     "    # Calculate Beta, the exponent parameter in the Black-Scholes formula\n",
@@ -231,7 +237,7 @@
     "    alpha_2 = (I_2 - K) * (I_2) ** (-Beta)\n",
     "    \n",
     "    # Logic to determine whether to exercise option\n",
-    "    if (S_0 >= I_2).item():\n",
+    "    if S_0 >= I_2:\n",
     "        # If stock price >= upper trigger price (boundary has been met), option price = intrinsic value\n",
     "        call_approx = S_0 - K\n",
     "    else:\n",
@@ -240,30 +246,29 @@
     "            alpha_2 * (S_0 ** Beta) - alpha_2 * phi(S_0, t_1, Beta, I_2, I_2, r, b, sigma) +\n",
     "            phi(S_0, t_1, 1, I_2, I_2, r, b, sigma) - phi(S_0, t_1, 1, I_1, I_2, r, b, sigma) -\n",
     "            K * phi(S_0, t_1, 0, I_2, I_2, r, b, sigma) + K * phi(S_0, t_1, 0, I_1, I_2, r, b, sigma) +\n",
-    "            alpha_1 * phi(S_0, t_1, Beta, I_1, I_2, r, b, sigma) - alpha_1 * ksi(S_0, T, Beta, I_1, I_2, I_1, t_1, r, b,\n",
-    "                                                                                 sigma) +\n",
+    "            alpha_1 * phi(S_0, t_1, Beta, I_1, I_2, r, b, sigma) - alpha_1 * ksi(S_0, T, Beta, I_1, I_2, I_1, t_1, r, b, sigma) +\n",
     "            ksi(S_0, T, 1, I_1, I_2, I_1, t_1, r, b, sigma) - ksi(S_0, T, 1, K, I_2, I_1, t_1, r, b, sigma) -\n",
     "            K * ksi(S_0, T, 0, I_1, I_2, I_1, t_1, r, b, sigma) + ksi(S_0, T, 0, K, I_2, I_1, t_1, r, b, sigma)\n",
     "            )\n",
     "\n",
-    "    return t_1, h_1, h_2, I_1, I_2, call_approx"
+    "    return t_1, h_1, h_2, I_1, I_2, call_approx\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First flat boundary (I_1): 452.52038\n",
-      "Second flat boundary (I_2): 461.63794\n",
+      "First flat boundary (I_1): 452.78254\n",
+      "Second flat boundary (I_2): 461.89949\n",
       "Time boundary (t_1): 226.0 days\n",
-      "h_1: 0.11097\n",
-      "h_2: 0.14115\n",
-      "Bjerksund-Stensland call approximation: 211401702.13763\n"
+      "h_1: 0.11086\n",
+      "h_2: 0.14102\n",
+      "Bjerksund-Stensland call approximation: nan\n"
      ]
     }
    ],
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +300,7 @@
       "Time boundary (t_1): 23.0 days\n",
       "h_1: 0.13476\n",
       "h_2: 0.17142\n",
-      "Bjerksund-Stensland call approximation: -97.37193 and the correct option price should be: 0.0205\n"
+      "Bjerksund-Stensland call approximation: nan and the correct option price should be: 0.0205\n"
      ]
     }
    ],
