new cbnd approximation from https://stackoverflow.com/questions/41596143/python-bivariate-normal-cdf-with-variable-upper-bound

--- a/BjerksundStensland/BjerksundStensland.ipynb
+++ b/BjerksundStensland/BjerksundStensland.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "151.94000244140625"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "0.32973889585923516"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,41 +130,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Cunulative Bivariate Normal Distribution Function\n",
-    "def genz_2004_cbnd(a, b, rho):\n",
+    "# Code from https://stackoverflow.com/questions/41596143/python-bivariate-normal-cdf-with-variable-upper-bound\n",
+    "def genz_2004_cbnd(dh, dk, r):\n",
+    "    # dh and dk get signs flipped right away\n",
+    "    dh = float(-dh)\n",
+    "    dk = float(-dk)\n",
+    "\n",
+    "    if (dh == np.inf) or (dk == np.inf): \n",
+    "        return 0\n",
     "    \n",
-    "    if a == 0 and b == 0:\n",
-    "        return 0.25\n",
-    "    \n",
-    "    p = 0.5 * np.sqrt(2)\n",
-    "    r = [0.00324045, -0.193582, 0.242299, 0.726809]\n",
-    "    h = [0.24840615, 1.971626, 3.199208, 1.0]\n",
-    "\n",
-    "    h1 = 0.0\n",
-    "    h2 = 0.0\n",
-    "    for i in range(4):\n",
-    "        h1 += r[i] * np.exp((a ** 2) * h[i])\n",
-    "        h2 += r[i] * np.exp((b ** 2) * h[i])\n",
-    "\n",
-    "    h1 = rho * np.exp(-(a ** 2) / 2) * h1\n",
-    "    h2 = rho * np.exp(-(b ** 2) / 2) * h2\n",
-    "\n",
-    "    c = 0.0\n",
-    "    if a < 0 and b < 0 and rho < 0:\n",
-    "        for i in range(4):\n",
-    "            for j in range(4):\n",
-    "                c += r[i] * r[j] * np.exp((a ** 2) * h[i] + (b ** 2) * h[j])\n",
-    "        c = c * np.exp((a * b * rho) ** 2 / (1 - rho ** 2)) / 2\n",
     "    else:\n",
-    "        c = norm.cdf(a) * norm.cdf(b) - (h1 + h2 - 2 * rho * h1 * h2) / (6 * np.pi ** 0.5 * (1 - rho ** 2) ** 1.5)\n",
+    "        if dh == - np.inf:\n",
+    "            if dk == - np.inf:\n",
+    "                return 1\n",
+    "            else:\n",
+    "                return norm.cdf(- dk)\n",
+    "        if dk == - np.inf:\n",
+    "            return norm.cdf(- dh)\n",
+    "        else:\n",
+    "            if r == 0:\n",
+    "                return norm.cdf(- dh)*norm.cdf(- dk)\n",
+    "            else:\n",
+    "                    tp=2*np.pi\n",
+    "                    h=dh\n",
+    "                    k=dk\n",
+    "                    hk=h*k\n",
+    "                    bvn=0\n",
+    "                    if abs(r) < 0.3:\n",
+    "                        w=np.array([0.1713244923791705,0.3607615730481384,0.4679139345726904])\n",
+    "                        x=np.array([0.9324695142031522,0.6612093864662647,0.238619186083197])\n",
+    "                    else:\n",
+    "                        if abs(r) < 0.75:\n",
+    "                            w=np.array([0.04717533638651177,0.1069393259953183,0.1600783285433464,0.2031674267230659,0.2334925365383547,0.2491470458134029])\n",
+    "                            x=np.array([0.9815606342467191,0.904117256370475,0.769902674194305,0.5873179542866171,0.3678314989981802,0.1252334085114692])\n",
+    "                        else:\n",
+    "                            w=np.array([0.01761400713915212,0.04060142980038694,0.06267204833410905,0.08327674157670475,0.1019301198172404,0.1181945319615184,0.1316886384491766,0.1420961093183821,0.1491729864726037,0.1527533871307259])\n",
+    "                            x=np.array([0.9931285991850949, 0.9639719272779138, 0.9122344282513259,0.8391169718222188, 0.7463319064601508, 0.6360536807265150,0.5108670019508271,0.3737060887154196,0.2277858511416451,0.07652652113349733])\n",
+    "                    w = np.concatenate((w, w), axis=0)\n",
+    "                    x = np.concatenate((1 - x, 1 + x), axis=0)\n",
     "\n",
-    "    return c\n",
+    "                    if abs(r) < 0.925:\n",
+    "                        hs=(h*h+k*k) / 2\n",
+    "                        asr=np.arcsin(r) / 2\n",
+    "                        sn=np.sin(asr*x)\n",
+    "                        bvn=np.dot(np.exp((sn*hk-hs)/(1-sn**2)),w.T)\n",
+    "                        bvn=bvn*asr/tp + norm.cdf(-h)*norm.cdf(-k)\n",
     "\n",
-    "# Compute psi Function\n",
+    "                    else:\n",
+    "                        if r < 0:\n",
+    "                            k=- k\n",
+    "                            hk=- hk\n",
+    "                            \n",
+    "                        if abs(r) < 1:\n",
+    "                            as1=1 - r ** 2\n",
+    "                            a=np.sqrt(as1)\n",
+    "                            bs=(h - k) ** 2\n",
+    "                            asr=- (bs / as1 + hk) / 2\n",
+    "                            c=(4 - hk) / 8\n",
+    "                            d=(12 - hk) / 80\n",
+    "\n",
+    "                            if asr > - 100:\n",
+    "                                bvn= a*np.exp(asr)*(1-c*(bs-as1)*(1-d*bs)/3+c*d*as1**2)\n",
+    "                            if hk > - 100:\n",
+    "                                b=np.sqrt(bs)\n",
+    "                                sp=np.sqrt(tp)*norm.cdf(-b/a)\n",
+    "                                bvn=bvn - np.exp(-hk/2)*sp*b*( 1 - c*bs*(1-d*bs)/3 )\n",
+    "                            a=a / 2\n",
+    "                            xs=(a*x) ** 2\n",
+    "                            asr=- (bs / xs + hk) / 2\n",
+    "                            ix=asr > - 100\n",
+    "                            xs=xs[ix]\n",
+    "                            sp=( 1 + c*xs*(1+5*d*xs) )\n",
+    "                            rs=np.sqrt(1 - xs)\n",
+    "                            ep=np.exp(- (hk / 2)*xs / (1 + rs) ** 2) / rs\n",
+    "                            bvn=( a*( np.dot((np.exp(asr[ix])*(sp-ep)),w[ix].T) ) - bvn )/tp\n",
+    "\n",
+    "                        if r > 0:\n",
+    "                            bvn=bvn + norm.cdf(- max(h,k))\n",
+    "\n",
+    "                        else:\n",
+    "                            if h >= k:\n",
+    "                                bvn=- bvn\n",
+    "\n",
+    "                            else:\n",
+    "                                if h < 0:\n",
+    "                                    L=norm.cdf(k) - norm.cdf(h)\n",
+    "                                else:\n",
+    "                                    L=norm.cdf(- h) - norm.cdf(- k)\n",
+    "                                bvn=L - bvn\n",
+    "\n",
+    "                    return max(0,min(1,bvn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-27.759926284422562\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Compute ksi Function\n",
     "def ksi(S_0, T, y, H, I_2, I_1, t_1, r, b, sigma):\n",
     "    '''\n",
     "    psi is a crucial part of the BS call option approximation formula as it incorporates the barrier feature and early exercise behavior into the option pricing calculation\n",
@@ -195,13 +272,41 @@
     "    ksi = np.exp((b - r) * T) * S_0**y * (\n",
     "        genz_2004_cbnd(-e_1, -f_1, -np.sqrt(t_1 / T)) + genz_2004_cbnd(-e_2, -f_2, -np.sqrt(t_1 / T)) - I_2**(k) * genz_2004_cbnd(-e_3, -f_3, -np.sqrt(t_1 / T)) - I_1**(k) * genz_2004_cbnd(-e_4, -f_4, -np.sqrt(t_1 / T))\n",
     "    )\n",
+    "    #test1 = np.exp((b - r) * T) * S_0**y\n",
+    "    #print('test1:', test1)\n",
+    "    #test2 = genz_2004_cbnd(-e_1, -f_1, -np.sqrt(t_1 / T))\n",
+    "    #print('test2:', test2)\n",
+    "    #test3 = genz_2004_cbnd(-e_2, -f_2, -np.sqrt(t_1 / T)) - I_2**(k)\n",
+    "    #print('test3:', test3)\n",
+    "    #test4 = genz_2004_cbnd(-e_3, -f_3, -np.sqrt(t_1 / T)) - I_1**(k)\n",
+    "    #print('test4:', test4)\n",
+    "    #print('-e_3', e_3)\n",
+    "    #print('-f_3', f_3)\n",
+    "    #print('-np.sqrt(t_1 / T))', -np.sqrt(t_1 / T))\n",
+    "    #print('I_1**(k)', I_1**(k))\n",
+    "    #test5 = genz_2004_cbnd(-e_4, -f_4, -np.sqrt(t_1 / T))\n",
+    "    #print('test5:', test5)\n",
+    "    return ksi\n",
     "\n",
-    "    return ksi"
+    "# Test the functions together\n",
+    "S_0 = 100  # Current stock price\n",
+    "T = 1  # Time to expiration\n",
+    "y = 0  # Cost of carry or dividend yield\n",
+    "H = 90  # Barrier level\n",
+    "I_2 = 110  # Second flat boundary\n",
+    "I_1 = 95  # First flat boundary\n",
+    "t_1 = 0.5  # Time boundary\n",
+    "r = 0.05  # Risk-free interest rate\n",
+    "b = 0.02  # Cost of carry\n",
+    "sigma = 0.2  # Volatility\n",
+    "\n",
+    "result = ksi(S_0, T, y, H, I_2, I_1, t_1, r, b, sigma)\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,19 +362,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First flat boundary (I_1): 452.78254\n",
-      "Second flat boundary (I_2): 461.89949\n",
+      "First flat boundary (I_1): 317.70544\n",
+      "Second flat boundary (I_2): 326.59138\n",
       "Time boundary (t_1): 226.0 days\n",
-      "h_1: 0.11086\n",
-      "h_2: 0.14102\n",
-      "Bjerksund-Stensland call approximation: nan\n"
+      "h_1: 0.19548\n",
+      "h_2: 0.24865\n",
+      "Bjerksund-Stensland call approximation: -135.73493\n"
      ]
     }
    ],
@@ -289,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +406,7 @@
       "Time boundary (t_1): 23.0 days\n",
       "h_1: 0.13476\n",
       "h_2: 0.17142\n",
-      "Bjerksund-Stensland call approximation: nan and the correct option price should be: 0.0205\n"
+      "Bjerksund-Stensland call approximation: -97.37193 and the correct option price should be: 0.0205\n"
      ]
     }
    ],
