--- a/Trinomial/Trinomial.ipynb
+++ b/Trinomial/Trinomial.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "### Function to Compute the Trinomial Model Option Price\n",
     "\n",
-    "def trinomial_model(S_0, K, T, r, sigma, option_type = 'call', n = 1000):\n",
+    "def trinomial_model(S_0, K, T, r, b, sigma, option_type, n = 1000):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "    S_0 (float): Current stock price (starting node of tree)\n",
@@ -109,31 +109,33 @@
     "    sigma (float): Volatility of the underlying stock\n",
     "    option_type (str): Type of option ('call' or 'put')\n",
     "    n (int): Number of steps in the binomial tree\n",
-    "    Returns:\n",
-    "    float: Option price\n",
     "    \"\"\"\n",
-    "    # Compute Delta T\n",
+    "    # Logic to change sign of option calculation\n",
+    "    if option_type == 'call':\n",
+    "        z = 1\n",
+    "    elif option_type == 'put':\n",
+    "        z = -1\n",
+    "    \n",
+    "    # Compute dt and Df\n",
     "    dt = T / n\n",
+    "    DF = np.exp(-r*dt)\n",
     "    # Compute up and down parameters\n",
-    "    u = np.exp(sigma * np.sqrt(3 * dt))\n",
-    "    d = 1 / u\n",
+    "    u = np.exp(sigma * np.sqrt(2 * dt))\n",
+    "    d = np.exp(-sigma * np.sqrt(2 * dt))\n",
     "\n",
     "    # Compute probability of Increase, Decrease, and No Change\n",
-    "    p_u = np.sqrt(dt / (12 * sigma**2)) * (r - (1/2 * sigma**2) + 1/6)\n",
-    "    p_d = -np.sqrt(dt / (12 * sigma**2)) * (r - (1/2 * sigma**2) + 1/6)\n",
+    "    p_u = ((np.exp((b * dt) / 2) - np.exp(-sigma * np.sqrt(dt / 2))) / \n",
+    "          (np.exp(sigma * np.sqrt(dt / 2)) - np.exp(-sigma * np.sqrt(dt / 2)))) ** 2\n",
+    "    p_d = ((np.exp(sigma * np.sqrt(dt / 2)) - (np.exp((b * dt) / 2))) / \n",
+    "       (np.exp(sigma * np.sqrt(dt / 2)) - np.exp(-sigma * np.sqrt(dt / 2)))) ** 2\n",
     "    p_m = 1 - p_u - p_d\n",
     "\n",
     "    # Init arrays for strike prices and option values\n",
-    "    S_n = np.zeros(n + 1)\n",
-    "    option_values = np.zeros(n + 1)\n",
+    "    option_values = np.zeros(2*n + 1)\n",
     "\n",
     "    # Generate the stock prices at each node S_n (points on Trinomial Tree)\n",
-    "    ''' \n",
-    "    The expression essentially computes the stock price at node n by starting from the initial price S_0​ and multiplying it by the \n",
-    "    factors u and d corresponding to the number of up and down movements, respectively, needed to reach node n.\n",
-    "    S_n​ = S_0 * u^m * d^(n−m)\n",
-    "    m (int): Number of up movements from the initial node to node n, calculated as m = n - i\n",
-    "    '''\n",
+    "    for i in range(2 * n + 1):\n",
+    "        option_values[i] = max(0, z * (S * u ** max(i - n, 0) * d ** max(n - i, 0) - X))\n",
     "    "
    ]
   }
