updated test case

--- a/Binomial/Binomial.ipynb
+++ b/Binomial/Binomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -34,10 +34,10 @@
     {
      "data": {
       "text/plain": [
-       "151.94000244140625"
+       "153.94000244140625"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32973889585923516"
+       "0.32998271375161553"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of the call option price is: 30.10950602138059\n",
+      "The value of the put option price is: 9.8656\n",
       "Up Factor: 0.0335\n",
-      "Down Factor: 0.0324\n"
+      "Down Factor: 0.0325\n"
      ]
     }
    ],
@@ -170,23 +170,23 @@
     "    return option_value, up_factor, down_factor\n",
     "\n",
     "### Function Output\n",
-    "option_type = 'call'\n",
+    "option_type = 'put'\n",
     "option_val, up_factor, down_factor = american_binomial_model(S_0, K = 139, T = 1, r = 0.05, sigma = sigma, option_type = option_type, n = 100)\n",
-    "print('The value of the ' + option_type + ' option price is: ' + str(option_val))\n",
+    "print('The value of the ' + option_type + ' option price is: ' + str(round(option_val, 4)))\n",
     "print('Up Factor: ' + str(round(up_factor, 4)))\n",
     "print('Down Factor: ' + str(round(down_factor, 4)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of the call option price is: 4.6277\n",
+      "The value of the put option price is: 4.6277, and the value is supposed to be: 4.6277\n",
       "Up Factor: 0.0995\n",
       "Down Factor: 0.0905\n"
      ]
@@ -195,7 +195,7 @@
    "source": [
     "### Manual Test (Accuracy Check)\n",
     "option_test, up_factor, down_factor = american_binomial_model(S_0 = 100, K = 95, T = 0.5, r = 0.08, sigma = 0.3, option_type = 'put', n = 5)\n",
-    "print('The value of the ' + option_type + ' option price is: ' + str(round(option_test, 4)))\n",
+    "print('The value of the ' + option_type + ' option price is: ' + str(round(option_test, 4)) + ', and the value is supposed to be: 4.6277')\n",
     "print('Up Factor: ' + str(round(up_factor, 4)))\n",
     "print('Down Factor: ' + str(round(down_factor, 4)))"
    ]
