--- a/Trinomial/Trinomial.ipynb
+++ b/Trinomial/Trinomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,25 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
+      "[*********************100%%**********************]  1 of 1 completed"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "135.24000549316406"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153.94000244140625\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -59,22 +63,21 @@
     "stock_data = import_stock_data(tickers, '2018-01-01')\n",
     "# Get the Current Stock Price (Starting Node of Tree)\n",
     "S_0 = stock_data[tickers].iloc[-1]\n",
-    "S_0"
+    "print(S_0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GOOG    0.326099\n",
-       "dtype: float64"
+       "0.32998271375161553"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,24 +85,26 @@
    "source": [
     "### Sigma Calculation \n",
     "\n",
+    "### Sigma Calculation \n",
     "def compute_sigma(data):\n",
     "    # Compute the standard deviation of returns\n",
     "    sigma = np.std(data) / 100\n",
     "    return sigma\n",
     "\n",
-    "sigma = compute_sigma(stock_data)\n",
+    "get_sigma = compute_sigma(stock_data)\n",
+    "sigma = get_sigma.values[0]\n",
     "sigma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Function to Compute the Trinomial Model Option Price\n",
     "\n",
-    "def trinomial_model(S_0, K, T, r, b, sigma, option_type, n = 1000):\n",
+    "def trinomial_model(S_0, K, T, r, b, sigma, option_type, n):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "    S_0 (float): Current stock price (starting node of tree)\n",
@@ -118,7 +123,6 @@
     "    \n",
     "    # Compute dt and Df\n",
     "    dt = T / n\n",
-    "    DF = np.exp(-r*dt)\n",
     "    # Compute up and down parameters\n",
     "    u = np.exp(sigma * np.sqrt(2 * dt))\n",
     "    d = np.exp(-sigma * np.sqrt(2 * dt))\n",
@@ -133,10 +137,70 @@
     "    # Init arrays for strike prices and option values\n",
     "    option_values = np.zeros(2*n + 1)\n",
     "\n",
-    "    # Generate the stock prices at each node S_n (points on Trinomial Tree)\n",
+    "    # Calculate option values at maturity by caluclating the optimal option value at each node i for 2n+1 nodes to to reach the final time step\n",
     "    for i in range(2 * n + 1):\n",
-    "        option_values[i] = max(0, z * (S * u ** max(i - n, 0) * d ** max(n - i, 0) - X))\n",
-    "    "
+    "        option_values[i] = max(0, z * (S_0 * u ** max(i - n, 0) * d ** max(n - i, 0) - K))\n",
+    "    \n",
+    "    # Backward induction to calculate option values at earlier time points\n",
+    "    for j in range(n - 1, -1, -1):\n",
+    "        for i in range(j * 2 + 1):\n",
+    "            option_values[i] = np.exp(-r*dt) * (p_u * option_values[i + 2] + p_m * option_values[i + 1] + p_d * option_values[i])\n",
+    "\n",
+    "    return option_values[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The trinomial calculation gives an Option Value: 11.0982\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Function call and outputs\n",
+    "K = 155   # Strike price of the option\n",
+    "T = 0.5   # Time to expiration (in years)\n",
+    "r = 0.08 # Risk-free interest rate\n",
+    "b = 0.1 # Cost of carry\n",
+    "n = 100  # Number of steps in the trinomial tree\n",
+    "option_type = \"put\" \n",
+    "\n",
+    "OptionValue = trinomial_model(S_0, K, T, r, b, sigma, option_type, n)\n",
+    "print(\"The trinomial calculation gives an Option Value: \" + str(round(OptionValue, 4)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The trinomial calculation gives an Option Value: 10.3966, and the value is supposed to be: 11.6493\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Test Case\n",
+    "S_1 = 100  # Current price of the underlying asset\n",
+    "K = 110   # Strike price of the option\n",
+    "T = 0.5   # Time to expiration (in years)\n",
+    "r = 0.08 # Risk-free interest rate\n",
+    "sigma = 0.27  # Volatility\n",
+    "b = 0.1 # Cost of carry\n",
+    "n = 30  # Number of steps in the trinomial tree\n",
+    "option_type = \"put\"  # \"c\" for call option, \"p\" for put option\n",
+    "\n",
+    "OptionValue = trinomial_model(S_1, K, T, r, b, sigma, option_type, n)\n",
+    "print(\"The trinomial calculation gives an Option Value: \" + str(round(OptionValue, 4)) + \", and the value is supposed to be: 11.6493\")"
    ]
   }
  ],
